--- a/app/views/voices/show.html.haml
+++ b/app/views/voices/show.html.haml
@@ -10,7 +10,7 @@
             = link_to '削除', voice_path(@voice.id), method: :delete
     %p= @voice.text
     %span.name
-      %a{:href => "/users/#{@voice.name}"}
+      %a{:href => "/users/#{@voice.user.id}"}
         %span 投稿者
         = @voice.user.nickname
   .container
